--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <p>At UTRGV, I put my budding educational philosophy to the test. I applied my AI knowledge to a real-world USDA research project while teaching programming concepts to over 300 undergraduate students. <strong class="text-lg text-sky-400">Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked.</strong> This is where my dream for education truly took shape.</p>
                         </div>
                         <div class="mt-4">
-                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_link">View the Research Project &rarr;</a>
+                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_link">View the Research Project </a>
                         </div>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                             <p>To truly understand how technology creates business value, I decided to build a solution myself. FinitUp is my ongoing project to build an AI-powered stock analysis platform, directly applying the principles from my A-grade MBA courses in Finance and Economics. <strong class="text-lg text-sky-400">This is my 'Learning by Building' philosophy in action, merging my entire skillset to create tangible value.</strong></p>
                         </div>
                         <div class="mt-4">
-                            <a href="https://finitup.com" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case5_link">Visit Finitup.com &rarr;</a>
+                            <a href="https://finitup.com" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case5_link">Visit Finitup.com </a>
                         </div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                             <p>Now, I'm channeling all these experiences into a single mission: making technology accessible. The AI Club is the culmination of my journey. It's a community built on the belief that anyone can learn and innovate with the right guidance and a hands-on approach, <strong class="text-lg text-sky-400">a principle I discovered through my own path from engineer to educator.</strong></p>
                         </div>
                         <div class="mt-4">
-                            <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case6_link">Visit the AI Club Website &rarr;</a>
+                            <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case6_link">Visit the AI Club Website </a>
                         </div>
                     </div>
                 </div>
@@ -371,15 +371,15 @@
                 case4_title: "Chapter 4: The Confirmation",
                 case4_role: "AI Researcher & Teaching Assistant at UTRGV",
                 case4_desc: `<p>At UTRGV, I put my budding educational philosophy to the test. I applied my AI knowledge to a real-world USDA research project while teaching programming concepts to over 300 undergraduate students. <strong class="text-lg text-sky-400">Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked.</strong> This is where my dream for education truly took shape.</p>`,
-                case4_link: "View the Research Project &rarr;",
+                case4_link: "View the Research Project ",
                 case5_title: "Chapter 5: The Synthesis",
                 case5_role: "Founder & Developer of FinitUp",
                 case5_desc: `<p>To truly understand how technology creates business value, I decided to build a solution myself. FinitUp is my ongoing project to build an AI-powered stock analysis platform, directly applying the principles from my A-grade MBA courses in Finance and Economics. <strong class="text-lg text-sky-400">This is my 'Learning by Building' philosophy in action, merging my entire skillset to create tangible value.</strong></p>`,
-                case5_link: "Visit Finitup.com &rarr;",
+                case5_link: "Visit Finitup.com ",
                 case6_title: "Chapter 6: The Current Mission",
                 case6_role: "Founder of the UTRGV AI Club",
                 case6_desc: `<p>Now, I'm channeling all these experiences into a single mission: making technology accessible. The AI Club is the culmination of my journey. It's a community built on the belief that anyone can learn and innovate with the right guidance and a hands-on approach, <strong class="text-lg text-sky-400">a principle I discovered through my own path from engineer to educator.</strong></p>`,
-                case6_link: "Visit the AI Club Website &rarr;",
+                case6_link: "Visit the AI Club Website ",
                 philosophy_title: "My Guiding Philosophy",
                 philosophy_subtitle: "Learning by Building",
                 philosophy_desc: "My philosophy isn't a theory; it's the result of my journey. I believe in learning by doing, making complex ideas simple through real-world application, and empowering others with the confidence to build their own solutions. This practical, hands-on approach guides everything I do.",
@@ -430,15 +430,15 @@
                 case4_title: "Capítulo 4: La Confirmación",
                 case4_role: "Investigador de IA y Asistente de Cátedra en UTRGV",
                 case4_desc: `<p>En UTRGV, puse a prueba mi incipiente filosofía educativa. Apliqué mis conocimientos de IA a un proyecto de investigación real del USDA mientras enseñaba conceptos de programación a más de 300 estudiantes de pregrado. <strong class="text-lg text-sky-400">Verlos comprender ideas complejas confirmó que mi enfoque práctico y directo funcionaba.</strong> Aquí es donde mi sueño por la educación realmente tomó forma.</p>`,
-                case4_link: "Ver el Proyecto de Investigación &rarr;",
+                case4_link: "Ver el Proyecto de Investigación ",
                 case5_title: "Capítulo 5: La Síntesis",
                 case5_role: "Fundador y Desarrollador de FinitUp",
                 case5_desc: `<p>Para entender verdaderamente cómo la tecnología crea valor empresarial, decidí construir una solución yo mismo. FinitUp es mi proyecto en curso para construir una plataforma de análisis de acciones impulsada por IA, aplicando directamente los principios de mis cursos de MBA con calificación A en Finanzas y Economía. <strong class="text-lg text-sky-400">Esta es mi filosofía de 'Aprender Construyendo' en acción, fusionando todo mi conjunto de habilidades para crear valor tangible.</strong></p>`,
-                case5_link: "Visitar Finitup.com &rarr;",
+                case5_link: "Visitar Finitup.com ",
                 case6_title: "Capítulo 6: La Misión Actual",
                 case6_role: "Fundador del Club de IA de UTRGV",
                 case6_desc: `<p>Ahora, estoy canalizando todas estas experiencias en una única misión: hacer la tecnología accesible. El Club de IA es la culminación de mi viaje. Es una comunidad construida sobre la creencia de que cualquiera puede aprender e innovar con la guía adecuada y un enfoque práctico, <strong class="text-lg text-sky-400">un principio que descubrí a través de mi propio camino de ingeniero a educador.</strong></p>`,
-                case6_link: "Visitar el Sitio Web del Club de IA &rarr;",
+                case6_link: "Visitar el Sitio Web del Club de IA ",
                 philosophy_title: "Mi Filosofía Rectora",
                 philosophy_subtitle: "Aprender Construyendo",
                 philosophy_desc: "Mi filosofía no es una teoría; es el resultado de mi viaje. Creo en aprender haciendo, en simplificar ideas complejas a través de la aplicación en el mundo real y en empoderar a otros con la confianza para construir sus propias soluciones. Este enfoque práctico y directo guía todo lo que hago.",
@@ -489,15 +489,15 @@
                 case4_title: "4장: 확신",
                 case4_role: "UTRGV AI 연구원 및 조교",
                 case4_desc: `<p>UTRGV에서 저는 막 싹트기 시작한 교육 철학을 시험대에 올렸습니다. 300명 이상의 학부생들에게 프로그래밍 개념을 가르치면서 제 AI 지식을 실제 USDA 연구 프로젝트에 적용했습니다. <strong class="text-lg text-sky-400">그들이 복잡한 아이디어를 이해하는 것을 보면서 저의 실용적이고 직접적인 접근 방식이 효과가 있다는 것을 확인했습니다.</strong> 이곳에서 교육에 대한 저의 꿈이 진정으로 구체화되었습니다.</p>`,
-                case4_link: "연구 프로젝트 보기 &rarr;",
+                case4_link: "연구 프로젝트 보기 ",
                 case5_title: "5장: 종합",
                 case5_role: "FinitUp 설립자 및 개발자",
                 case5_desc: `<p>기술이 어떻게 비즈니스 가치를 창출하는지 진정으로 이해하기 위해, 저는 직접 솔루션을 만들어보기로 결심했습니다. FinitUp은 금융 및 경제학 MBA 과정에서 A학점을 받은 원칙을 직접 적용하여 AI 기반 주식 분석 플랫폼을 구축하는 저의 진행 중인 프로젝트입니다. <strong class="text-lg text-sky-400">이것이 바로 저의 '만들면서 배우기' 철학이 실제로 구현된 것이며, 저의 모든 기술을 통합하여 실질적인 가치를 창출하는 과정입니다.</strong></p>`,
-                case5_link: "Finitup.com 방문하기 &rarr;",
+                case5_link: "Finitup.com 방문하기 ",
                 case6_title: "6장: 현재의 미션",
                 case6_role: "UTRGV AI 클럽 설립자",
                 case6_desc: `<p>이제 저는 이 모든 경험을 하나의 미션, 즉 기술을 누구나 접근 가능하게 만드는 데 쏟아붓고 있습니다. AI 클럽은 제 여정의 정점입니다. 올바른 지도와 실습 접근 방식만 있다면 누구나 배우고 혁신할 수 있다는 믿음 위에 세워진 커뮤니티이며, <strong class="text-lg text-sky-400">이 원칙은 엔지니어에서 교육자로 이어진 저 자신의 길을 통해 발견한 것입니다.</strong></p>`,
-                case6_link: "AI 클럽 웹사이트 방문하기 &rarr;",
+                case6_link: "AI 클럽 웹사이트 방문하기 ",
                 philosophy_title: "나의 지침 철학",
                 philosophy_subtitle: "만들면서 배우기",
                 philosophy_desc: "저의 철학은 이론이 아니라 제 여정의 결과물입니다. 저는 직접 해보면서 배우고, 실제 적용을 통해 복잡한 아이디어를 단순하게 만들며, 다른 사람들이 자신만의 솔루션을 구축할 수 있는 자신감을 갖도록 힘을 실어주는 것을 믿습니다. 이 실용적이고 직접적인 접근 방식이 제가 하는 모든 일을 이끌어갑니다.",
