--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 </head>
 <body>
 
-    <!-- Header and Navigation -->
     <header class="bg-slate-900/95 backdrop-blur-lg sticky top-0 z-50 shadow-lg border-b border-slate-800">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="text-xl font-poppins font-bold text-white">Junseong Park</a>
@@ -76,14 +75,12 @@
     </header>
 
     <main class="container mx-auto px-6 relative">
-        <!-- Language Switcher -->
         <div class="absolute top-6 right-6 z-10 flex items-center space-x-2">
             <button class="lang-btn active" data-lang-switch="en">EN</button>
             <button class="lang-btn" data-lang-switch="es">ES</button>
             <button class="lang-btn" data-lang-switch="ko">KO</button>
         </div>
 
-        <!-- 1. Hero Section -->
         <section class="py-20 md:py-32 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-2/3 text-center md:text-left">
                 <h1 class="text-4xl md:text-6xl font-poppins font-bold text-white leading-tight" data-lang="hero_title">Connecting Ideas to Reality Through Technology</h1>
@@ -109,7 +106,6 @@
             </div>
         </section>
 
-        <!-- 2. Tech Stack & Skills -->
         <section id="skills" class="py-20">
             <h2 class="section-title" data-lang="skills_title">My Core Competencies</h2>
             <p class="section-subtitle" data-lang="skills_subtitle">These are the tools and technologies I've mastered through hands-on application.</p>
@@ -138,16 +134,27 @@
             </div>
         </section>
 
-        <!-- 3. Professional Experience -->
         <section id="experience" class="py-20">
             <h2 class="section-title" data-lang="experience_title">Professional Experience</h2>
             <p class="section-subtitle" data-lang="experience_subtitle">A timeline of my key roles and responsibilities.</p>
             <div class="mt-12 relative border-l-2 border-slate-700 max-w-3xl mx-auto">
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
+                    <h3 class="text-lg font-semibold text-white">Korean Language Instructor <span class="text-sky-400">@ Language Success School</span></h3>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">July 2025 – Present</time>
+                    <p class="text-slate-400 text-sm" data-lang="exp_language">Conduct Korean language classes, designing lesson plans and creating engaging materials to foster language acquisition and cultural understanding.</p>
+                </div>
+                <div class="mb-10 ml-8">
+                    <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">AI Trainer (for LLMs) <span class="text-sky-400">@ Outlier</span></h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Present</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_outlier">Currently fine-tuning large language models, focusing on creating clear and effective training data.</p>
+                </div>
+                <div class="mb-10 ml-8">
+                    <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
+                    <h3 class="text-lg font-semibold text-white">Cashier <span class="text-sky-400">@ Burlington</span></h3>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2023 – July 2025</time>
+                    <p class="text-slate-400 text-sm" data-lang="exp_burlington">Provided bilingual customer service in a fast-paced retail environment, enhancing communication and problem-solving skills.</p>
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
@@ -160,6 +167,12 @@
                     <h3 class="text-lg font-semibold text-white">University Lab Technician & Instructor <span class="text-sky-400">@ Industrial inside Factory Center</span></h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Sep 2018 – Feb 2021</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_lab">Managed 50+ machines and first developed my passion for teaching by creating an engineering curriculum for over 300 students.</p>
+                </div>
+                <div class="mb-10 ml-8">
+                    <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
+                    <h3 class="text-lg font-semibold text-white">Global Education Center Support <span class="text-sky-400">@ Soonchunhyang University</span></h3>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Sep 2018 – Feb 2021</time>
+                    <p class="text-slate-400 text-sm" data-lang="exp_globaled">Supported international students by facilitating orientations and promoting cultural integration, while assisting teachers in an elementary-level English program.</p>
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
@@ -176,7 +189,6 @@
             </div>
         </section>
 
-        <!-- 4. Education -->
         <section id="education" class="py-20">
             <h2 class="section-title" data-lang="education_title">Education</h2>
             <div class="mt-12 max-w-3xl mx-auto space-y-8">
@@ -196,7 +208,6 @@
             </div>
         </section>
         
-        <!-- 5. My Path (Case Studies) -->
         <section id="casestudies" class="py-20">
             <h2 class="section-title" data-lang="casestudies_title">My Path: From Engineer to Educator</h2>
             <p class="section-subtitle" data-lang="casestudies_subtitle">My interest in education grew naturally from my experiences as an engineer and leader. Each step of my journey revealed a new piece of the puzzle.</p>
@@ -291,7 +302,6 @@
             </div>
         </section>
         
-        <!-- 6. My Guiding Philosophy -->
         <section id="philosophy" class="py-20">
             <h2 class="section-title" data-lang="philosophy_title">My Guiding Philosophy</h2>
             <div class="mt-12 max-w-3xl mx-auto text-center bg-slate-800 p-8 md:p-12 rounded-xl shadow-lg">
@@ -304,7 +314,6 @@
 
     </main>
 
-    <!-- Footer -->
     <footer class="bg-slate-800/50 border-t border-slate-800">
         <div class="container mx-auto px-6 py-12 text-center">
             <h2 class="text-3xl font-bold text-white" data-lang="footer_title">Let's Connect</h2>
@@ -351,9 +360,12 @@
                 skills_cat3_title: "Engineering & Prototyping",
                 experience_title: "Professional Experience",
                 experience_subtitle: "A timeline of my key roles and responsibilities.",
+                exp_language: "Conduct Korean language classes, designing lesson plans and creating engaging materials to foster language acquisition and cultural understanding.",
                 exp_outlier: "Currently fine-tuning large language models, focusing on creating clear and effective training data.",
+                exp_burlington: "Provided bilingual customer service in a fast-paced retail environment, enhancing communication and problem-solving skills.",
                 exp_utrgv: "Mentored 300+ students in Python and ML, refining methods to make complex topics accessible.",
                 exp_lab: "Managed 50+ machines and first developed my passion for teaching by creating an engineering curriculum for over 300 students.",
+                exp_globaled: "Supported international students by facilitating orientations and promoting cultural integration, while assisting teachers in an elementary-level English program.",
                 exp_army: "Led a 4-technician team, honing skills in process management and hands-on technical training.",
                 exp_proto: "Mastered precision engineering while collaborating with and learning from senior designers.",
                 education_title: "Education",
@@ -410,9 +422,12 @@
                 skills_cat3_title: "Ingeniería y Prototipos",
                 experience_title: "Experiencia Profesional",
                 experience_subtitle: "Una cronología de mis roles y responsabilidades clave.",
+                exp_language: "Imparto clases de coreano, diseñando planes de lecciones y creando materiales atractivos para fomentar la adquisición del idioma y la comprensión cultural.",
                 exp_outlier: "Actualmente afinando grandes modelos de lenguaje, centrándome en crear datos de entrenamiento claros y efectivos.",
+                exp_burlington: "Proporcioné servicio al cliente bilingüe en un entorno minorista de ritmo rápido, mejorando las habilidades de comunicación y resolución de problemas.",
                 exp_utrgv: "Guié a más de 300 estudiantes en Python y ML, refinando métodos para hacer accesibles temas complejos.",
                 exp_lab: "Gestioné más de 50 máquinas y desarrollé por primera vez mi pasión por la enseñanza creando un plan de estudios de ingeniería para más de 300 estudiantes.",
+                exp_globaled: "Apoyé a estudiantes internacionales facilitando orientaciones y promoviendo la integración cultural, mientras asistía a maestros en un programa de inglés de nivel primario.",
                 exp_army: "Lideré un equipo de 4 técnicos, perfeccionando habilidades en gestión de procesos y capacitación técnica práctica.",
                 exp_proto: "Dominé la ingeniería de precisión mientras colaboraba y aprendía de diseñadores senior.",
                 education_title: "Educación",
@@ -469,9 +484,12 @@
                 skills_cat3_title: "엔지니어링 및 프로토타이핑",
                 experience_title: "주요 경력",
                 experience_subtitle: "저의 주요 역할과 책임에 대한 타임라인입니다.",
+                exp_language: "다양한 수준의 학생들을 위해 수업 계획을 설계하고, 언어 습득과 문화 이해를 돕는 매력적인 교육 자료를 개발하며 한국어 수업을 진행합니다.",
                 exp_outlier: "현재 대규모 언어 모델을 미세 조정하며, 명확하고 효과적인 학습 데이터를 만드는 데 집중하고 있습니다.",
+                exp_burlington: "빠르게 변화하는 소매 환경에서 이중 언어 고객 서비스를 제공하며 의사소통 및 문제 해결 능력을 향상시켰습니다.",
                 exp_utrgv: "300명 이상의 학생들에게 파이썬과 머신러닝을 가르치며 복잡한 주제를 쉽게 전달하는 방법을 다듬었습니다.",
                 exp_lab: "50대 이상의 장비를 관리하고, 300명 이상의 학생들을 위한 엔지니어링 커리큘럼을 만들며 교육에 대한 열정을 처음 발견했습니다.",
+                exp_globaled: "초급 영어 프로그램에서 교사를 보조하며, 오리엔테이션을 진행하고 문화 통합을 촉진하여 유학생들을 지원했습니다.",
                 exp_army: "4명의 기술자로 구성된 팀을 이끌며 프로세스 관리와 실무 기술 훈련 역량을 연마했습니다.",
                 exp_proto: "선임 디자이너들과 협력하고 배우면서 정밀 엔지니어링 기술을 마스터했습니다.",
                 education_title: "학력",
@@ -538,7 +556,7 @@
                 }
             });
              // Set html lang attribute
-            document.documentElement.lang = lang;
+             document.documentElement.lang = lang;
         };
 
         langButtons.forEach(button => {
