update experience years

--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">University Lab Technician & Instructor <span class="text-sky-400">@ Industrial inside Factory Center</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Sep 2018 – Feb 2021</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Sep 2018 – Dec 2018, April 2019 – Feb 2021</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_lab">Managed 50+ machines and first developed my passion for teaching by creating an engineering curriculum for over 300 students.</p>
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">Global Education Center Support <span class="text-sky-400">@ Soonchunhyang University</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Sep 2018 – Feb 2021</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Jan 2019 – Mar 2019</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_globaled">Supported international students by facilitating orientations and promoting cultural integration, while assisting teachers in an elementary-level English program.</p>
                 </div>
                 <div class="mb-10 ml-8">
@@ -183,7 +183,7 @@
                 <div class="ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">Prototyping Technician <span class="text-sky-400">@ Creative Design Center</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">May 2015 – May 2016</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">June 2015 – June 2016</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_proto">Mastered precision engineering while collaborating with and learning from senior designers.</p>
                 </div>
             </div>
