--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <h3 class="text-2xl font-bold text-white" data-lang="case3_title">Chapter 3: The Spark of Education</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case3_role">University Lab Technician & Instructor</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case3_desc">
-                            <p><strong class="text-lg text-sky-400">This role was a turning point.</strong> While managing a lab with over 50 machines and 99% uptime, <strong class="text-lg text-sky-400">I also had the opportunity to teach.</strong> I noticed that everyone learned differently, and I began developing unique ways to explain it. This is where my passion for empowering others through education was born.</p>
+                            <p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing to robotics. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>
                         </div>
                     </div>
                 </div>
@@ -379,7 +379,7 @@
                 case2_desc: "<p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – the challenge of transferring complex knowledge clearly and effectively under pressure.</p>",
                 case3_title: "Chapter 3: The Spark of Education",
                 case3_role: "University Lab Technician & Instructor",
-                case3_desc: `<p><strong class="text-lg text-sky-400">This role was a turning point.</strong> While managing a lab with over 50 machines and 99% uptime, <strong class="text-lg text-sky-400">I also had the opportunity to teach.</strong> I noticed that everyone learned differently, and I began developing unique ways to explain it. This is where my passion for empowering others through education was born.</p>`,
+                case3_desc: `<p>This role was a turning point. While managing a lab of over 50 machines, I <strong class="text-lg text-sky-400">developed and taught more than 10 new engineering workshops to over 100 students</strong>, covering everything from 3D printing to robotics. I also led a student team to build a 3D-printed robot arm and mentored university startups on prototyping. It was here I discovered my true passion: <strong class="text-lg text-sky-400">making complex technology accessible and empowering people through hands-on education.</strong></p>`,
                 case4_title: "Chapter 4: The Confirmation",
                 case4_role: "AI Researcher & Teaching Assistant at UTRGV",
                 case4_desc: `<p>At UTRGV, I put my budding educational philosophy to the test. I applied my AI knowledge to a real-world USDA research project while teaching programming concepts to over 300 undergraduate students. <strong class="text-lg text-sky-400">Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked.</strong> This is where my dream for education truly took shape.</p>`,
@@ -441,7 +441,7 @@
                 case2_desc: "<p>Liderar un equipo de mantenimiento de 4 técnicos me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también entrenar a mi equipo para hacer lo mismo. Esta fue mi primera experiencia real con la enseñanza: el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</p>",
                 case3_title: "Capítulo 3: La Chispa de la Educación",
                 case3_role: "Técnico de Laboratorio e Instructor Universitario",
-                case3_desc: `<p><strong class="text-lg text-sky-400">Este rol fue un punto de inflexión.</strong> Mientras gestionaba un laboratorio con más de 50 máquinas y un 99% de tiempo de actividad, <strong class="text-lg text-sky-400">también tuve la oportunidad de enseñar.</strong> Noté que todos aprendían de manera diferente y comencé a desarrollar formas únicas de explicarlo. Aquí es donde nació mi pasión por empoderar a otros a través de la educación.</p>`,
+                case3_desc: `<p>Este rol fue un punto de inflexión. Mientras gestionaba un laboratorio de más de 50 máquinas, <strong class="text-lg text-sky-400">desarrollé e impartí más de 10 nuevos talleres de ingeniería práctica a más de 100 estudiantes</strong>, cubriendo desde impresión 3D hasta robótica. También lideré un equipo estudiantil para construir un brazo robótico impreso en 3D y asesoré a startups universitarias en prototipado. Fue aquí donde descubrí mi verdadera pasión: <strong class="text-lg text-sky-400">hacer la tecnología compleja accesible y empoderar a las personas mediante la educación práctica.</strong></p>`,
                 case4_title: "Capítulo 4: La Confirmación",
                 case4_role: "Investigador de IA y Asistente de Cátedra en UTRGV",
                 case4_desc: `<p>En UTRGV, puse a prueba mi incipiente filosofía educativa. Apliqué mis conocimientos de IA a un proyecto de investigación real del USDA mientras enseñaba conceptos de programación a más de 300 estudiantes de pregrado. <strong class="text-lg text-sky-400">Verlos comprender ideas complejas confirmó que mi enfoque práctico y directo funcionaba.</strong> Aquí es donde mi sueño por la educación realmente tomó forma.</p>`,
@@ -503,7 +503,7 @@
                 case2_desc: "<p>4명의 기술자로 구성된 정비팀을 이끌면서 기술만으로는 충분하지 않다는 것을 배웠습니다. 문제를 해결할 뿐만 아니라 팀원들이 같은 일을 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다. 압박감 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전이었죠.</p>",
                 case3_title: "3장: 교육의 불꽃",
                 case3_role: "대학 실험실 기술자 및 강사",
-                case3_desc: `<p><strong class="text-lg text-sky-400">이 역할은 전환점이었습니다.</strong> 50대 이상의 기계와 99%의 가동률을 자랑하는 실험실을 관리하면서, <strong class="text-lg text-sky-400">가르칠 기회도 있었습니다.</strong> 저는 모든 사람이 다르게 배운다는 것을 깨닫고, 그것을 설명하는 독특한 방법을 개발하기 시작했습니다. 이것이 바로 교육을 통해 다른 사람들에게 힘을 실어주고자 하는 저의 열정이 태어난 곳입니다.</p>`,
+                case3_desc: `<p>이 역할은 전환점이었습니다. 50대 이상의 기계를 관리하면서, <strong class="text-lg text-sky-400">100명 이상의 대학생들에게 10개 이상의 새로운 실습 중심 엔지니어링 워크숍을 개발하고 가르쳤습니다</strong>. 3D 프린팅부터 로보틱스까지 모든 것을 다루었습니다. 또한 학생 팀을 이끌어 3D 프린팅 로봇 팔을 제작하고 대학 스타트업들의 프로토타입 제작을 멘토링했습니다. 바로 이곳에서 저는 제 진정한 열정을 발견했습니다: <strong class="text-lg text-sky-400">복잡한 기술을 쉽게 접할 수 있게 만들고, 직접 해보는 교육을 통해 사람들에게 힘을 실어주는 것.</strong></p>`,
                 case4_title: "4장: 확신",
                 case4_role: "UTRGV AI 연구원 및 조교",
                 case4_desc: `<p>UTRGV에서 저는 막 싹트기 시작한 교육 철학을 시험대에 올렸습니다. 300명 이상의 학부생들에게 프로그래밍 개념을 가르치면서 제 AI 지식을 실제 USDA 연구 프로젝트에 적용했습니다. <strong class="text-lg text-sky-400">그들이 복잡한 아이디어를 이해하는 것을 보면서 저의 실용적이고 직접적인 접근 방식이 효과가 있다는 것을 확인했습니다.</strong> 이곳에서 교육에 대한 저의 꿈이 진정으로 구체화되었습니다.</p>`,
