--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">University Lab Technician & Instructor <span class="text-sky-400">@ Industrial inside Factory Center</span></h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Sep 2018 – Dec 2018, April 2019 – Feb 2021</time>
-                    <p class="text-slate-400 text-sm" data-lang="exp_lab">Managed 50+ machines and first developed my passion for teaching by creating an engineering curriculum for over 300 students.</p>
+                    <p class="text-slate-400 text-sm" data-lang="exp_lab">Managed 50+ machines and first developed my passion for teaching by creating 10+ engineering workshops for 100 students.</p>
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
@@ -426,7 +426,7 @@
                 exp_outlier: "Actualmente afinando grandes modelos de lenguaje, centrándome en crear datos de entrenamiento claros y efectivos.",
                 exp_burlington: "Proporcioné servicio al cliente bilingüe en un entorno minorista de ritmo rápido, mejorando las habilidades de comunicación y resolución de problemas.",
                 exp_utrgv: "Guié a más de 300 estudiantes en Python y ML, refinando métodos para hacer accesibles temas complejos.",
-                exp_lab: "Gestioné más de 50 máquinas y desarrollé por primera vez mi pasión por la enseñanza creando un plan de estudios de ingeniería para más de 300 estudiantes.",
+                exp_lab: "Administré más de 50 máquinas y desarrollé mi pasión por la enseñanza al crear más de 10 talleres de ingeniería para 100 estudiantes.",
                 exp_globaled: "Apoyé a estudiantes internacionales facilitando orientaciones y promoviendo la integración cultural, mientras asistía a maestros en un programa de inglés de nivel primario.",
                 exp_army: "Lideré un equipo de 4 técnicos, perfeccionando habilidades en gestión de procesos y capacitación técnica práctica.",
                 exp_proto: "Dominé la ingeniería de precisión mientras colaboraba y aprendía de diseñadores senior.",
@@ -488,7 +488,7 @@
                 exp_outlier: "현재 대규모 언어 모델을 미세 조정하며, 명확하고 효과적인 학습 데이터를 만드는 데 집중하고 있습니다.",
                 exp_burlington: "빠르게 변화하는 소매 환경에서 이중 언어 고객 서비스를 제공하며 의사소통 및 문제 해결 능력을 향상시켰습니다.",
                 exp_utrgv: "300명 이상의 학생들에게 파이썬과 머신러닝을 가르치며 복잡한 주제를 쉽게 전달하는 방법을 다듬었습니다.",
-                exp_lab: "50대 이상의 장비를 관리하고, 300명 이상의 학생들을 위한 엔지니어링 커리큘럼을 만들며 교육에 대한 열정을 처음 발견했습니다.",
+                exp_lab: "50대 이상의 장비를 관리하고, 100명 이상의 학생들을 위한 엔지니어링 워크숍을 만들고 가르치며 교육에 대한 열정을 처음 발견했습니다.",
                 exp_globaled: "초급 영어 프로그램에서 교사를 보조하며, 오리엔테이션을 진행하고 문화 통합을 촉진하여 유학생들을 지원했습니다.",
                 exp_army: "4명의 기술자로 구성된 팀을 이끌며 프로세스 관리와 실무 기술 훈련 역량을 연마했습니다.",
                 exp_proto: "선임 디자이너들과 협력하고 배우면서 정밀 엔지니어링 기술을 마스터했습니다.",
