--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 exp_outlier: "Currently fine-tuning large language models, focusing on creating clear and effective training data.",
                 exp_burlington: "Provided bilingual customer service in a fast-paced retail environment, enhancing communication and problem-solving skills.",
                 exp_utrgv: "Mentored 300+ students in Python and ML, refining methods to make complex topics accessible.",
-                exp_lab: "Managed 50+ machines and first developed my passion for teaching by creating an engineering curriculum for over 300 students.",
+                exp_lab: "Managed 50+ machines(3D Prints, 3D Scanners, Drones etc) and first developed my passion for teaching by creating 10+ engineering workshops for 100 students.",
                 exp_globaled: "Supported international students by facilitating orientations and promoting cultural integration, while assisting teachers in an elementary-level English program.",
                 exp_army: "Led a 4-technician team, honing skills in process management and hands-on technical training.",
                 exp_proto: "Mastered precision engineering while collaborating with and learning from senior designers.",
@@ -488,7 +488,7 @@
                 exp_outlier: "현재 대규모 언어 모델을 미세 조정하며, 명확하고 효과적인 학습 데이터를 만드는 데 집중하고 있습니다.",
                 exp_burlington: "빠르게 변화하는 소매 환경에서 이중 언어 고객 서비스를 제공하며 의사소통 및 문제 해결 능력을 향상시켰습니다.",
                 exp_utrgv: "300명 이상의 학생들에게 파이썬과 머신러닝을 가르치며 복잡한 주제를 쉽게 전달하는 방법을 다듬었습니다.",
-                exp_lab: "50대 이상의 장비를 관리하고, 100명 이상의 학생들을 위한 엔지니어링 워크숍을 만들고 가르치며 교육에 대한 열정을 처음 발견했습니다.",
+                exp_lab: "50대 이상의 장비((3D프린터, 3D 스캐너, 드론 등)를 관리하고, 100명 이상의 학생들을 위한 엔지니어링 워크숍을 만들고 가르치며 교육에 대한 열정을 처음 발견했습니다.",
                 exp_globaled: "초급 영어 프로그램에서 교사를 보조하며, 오리엔테이션을 진행하고 문화 통합을 촉진하여 유학생들을 지원했습니다.",
                 exp_army: "4명의 기술자로 구성된 팀을 이끌며 프로세스 관리와 실무 기술 훈련 역량을 연마했습니다.",
                 exp_proto: "선임 디자이너들과 협력하고 배우면서 정밀 엔지니어링 기술을 마스터했습니다.",
