--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 exp_outlier: "Actualmente afinando grandes modelos de lenguaje, centrándome en crear datos de entrenamiento claros y efectivos.",
                 exp_burlington: "Proporcioné servicio al cliente bilingüe en un entorno minorista de ritmo rápido, mejorando las habilidades de comunicación y resolución de problemas.",
                 exp_utrgv: "Guié a más de 300 estudiantes en Python y ML, refinando métodos para hacer accesibles temas complejos.",
-                exp_lab: "Administré más de 50 máquinas y desarrollé mi pasión por la enseñanza al crear más de 10 talleres de ingeniería para 100 estudiantes.",
+                exp_lab: "Administré más de 50 máquinas(3D prints, 3D scanners, Drones) y desarrollé mi pasión por la enseñanza al crear más de 10 talleres de ingeniería para 100 estudiantes.",
                 exp_globaled: "Apoyé a estudiantes internacionales facilitando orientaciones y promoviendo la integración cultural, mientras asistía a maestros en un programa de inglés de nivel primario.",
                 exp_army: "Lideré un equipo de 4 técnicos, perfeccionando habilidades en gestión de procesos y capacitación técnica práctica.",
                 exp_proto: "Dominé la ingeniería de precisión mientras colaboraba y aprendía de diseñadores senior.",
