--- a/index.html
+++ b/index.html
@@ -258,11 +258,12 @@
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case4_title">Chapter 4: The Confirmation</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case4_role">AI Researcher & Teaching Assistant at UTRGV</p>
-                          <div class="mt-4 text-slate-400 space-y-2" data-lang="case4_desc">
+                            <div class="mt-4 text-slate-400 space-y-2" data-lang="case4_desc">
                             <p>At UTRGV, I put my budding educational philosophy to the test. I applied my AI knowledge to a real-world USDA research project while teaching programming concepts to over 300 undergraduate students. <strong class="text-lg text-sky-400">Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked.</strong> This is where my dream for education truly took shape.</p>
                         </div>
-                        <div class="mt-4">
+                        <div class="mt-4 space-x-4">
                             <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_link">View the Research Project </a>
+                            <a href="https://ieeexplore.ieee.org/document/10903284" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline" data-lang="case4_paper_link">View the Paper</a>
                         </div>
                     </div>
                 </div>
@@ -384,6 +385,7 @@
                 case4_role: "AI Researcher & Teaching Assistant at UTRGV",
                 case4_desc: `<p>At UTRGV, I put my budding educational philosophy to the test. I applied my AI knowledge to a real-world USDA research project while teaching programming concepts to over 300 undergraduate students. <strong class="text-lg text-sky-400">Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked.</strong> This is where my dream for education truly took shape.</p>`,
                 case4_link: "View the Research Project ",
+                case4_paper_link: "View the Paper",
                 case5_title: "Chapter 5: The Synthesis",
                 case5_role: "Founder & Developer of FinitUp",
                 case5_desc: `<p>To truly understand how technology creates business value, I decided to build a solution myself. FinitUp is my ongoing project to build an AI-powered stock analysis platform, directly applying the principles from my A-grade MBA courses in Finance and Economics. <strong class="text-lg text-sky-400">This is my 'Learning by Building' philosophy in action, merging my entire skillset to create tangible value.</strong></p>`,
@@ -446,6 +448,7 @@
                 case4_role: "Investigador de IA y Asistente de Cátedra en UTRGV",
                 case4_desc: `<p>En UTRGV, puse a prueba mi incipiente filosofía educativa. Apliqué mis conocimientos de IA a un proyecto de investigación real del USDA mientras enseñaba conceptos de programación a más de 300 estudiantes de pregrado. <strong class="text-lg text-sky-400">Verlos comprender ideas complejas confirmó que mi enfoque práctico y directo funcionaba.</strong> Aquí es donde mi sueño por la educación realmente tomó forma.</p>`,
                 case4_link: "Ver el Proyecto de Investigación ",
+                case4_paper_link: "Ver el Artículo",
                 case5_title: "Capítulo 5: La Síntesis",
                 case5_role: "Fundador y Desarrollador de FinitUp",
                 case5_desc: `<p>Para entender verdaderamente cómo la tecnología crea valor empresarial, decidí construir una solución yo mismo. FinitUp es mi proyecto en curso para construir una plataforma de análisis de acciones impulsada por IA, aplicando directamente los principios de mis cursos de MBA con calificación A en Finanzas y Economía. <strong class="text-lg text-sky-400">Esta es mi filosofía de 'Aprender Construyendo' en acción, fusionando todo mi conjunto de habilidades para crear valor tangible.</strong></p>`,
@@ -508,6 +511,7 @@
                 case4_role: "UTRGV AI 연구원 및 조교",
                 case4_desc: `<p>UTRGV에서 저는 막 싹트기 시작한 교육 철학을 시험대에 올렸습니다. 300명 이상의 학부생들에게 프로그래밍 개념을 가르치면서 제 AI 지식을 실제 USDA 연구 프로젝트에 적용했습니다. <strong class="text-lg text-sky-400">그들이 복잡한 아이디어를 이해하는 것을 보면서 저의 실용적이고 직접적인 접근 방식이 효과가 있다는 것을 확인했습니다.</strong> 이곳에서 교육에 대한 저의 꿈이 진정으로 구체화되었습니다.</p>`,
                 case4_link: "연구 프로젝트 보기 ",
+                case4_paper_link: "논문 보기",
                 case5_title: "5장: 종합",
                 case5_role: "FinitUp 설립자 및 개발자",
                 case5_desc: `<p>기술이 어떻게 비즈니스 가치를 창출하는지 진정으로 이해하기 위해, 저는 직접 솔루션을 만들어보기로 결심했습니다. FinitUp은 금융 및 경제학 MBA 과정에서 A학점을 받은 원칙을 직접 적용하여 AI 기반 주식 분석 플랫폼을 구축하는 저의 진행 중인 프로젝트입니다. <strong class="text-lg text-sky-400">이것이 바로 저의 '만들면서 배우기' 철학이 실제로 구현된 것이며, 저의 모든 기술을 통합하여 실질적인 가치를 창출하는 과정입니다.</strong></p>`,
