--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">AI Trainer (for LLMs) <span class="text-sky-400">@ Outlier</span></h3>
-                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Present</time>
+                    <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Jul 2025</time>
                     <p class="text-slate-400 text-sm" data-lang="exp_outlier">Currently fine-tuning large language models, focusing on creating clear and effective training data.</p>
                 </div>
                 <div class="mb-10 ml-8">
